--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset="utf-8" name="viewport" content="width=device-width" type = "text\html">
+        <title>Portfolio</title>
+    </head>
 
+    <body>
+    </body>
+</html>
