--- a/Hello Super Idol.html
+++ b/Hello Super Idol.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
-        <a style="text-decoration: none" href = "Hello Super Idol.html"> I have no dreams </a>
+        <p> Super idol </p>
+        <a href="index.html"> I have no dreams </a>
     </body>
 </html>
