--- a/Searching.html
+++ b/Searching.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width" type = "text\html">
-        <title>SuperIdolV2</title>
+        <title>Searching Algorithms</title>
     </head>
 
     <body>
