--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width" type = "text\html">
         <title>SuperIdolV2</title>
+        <link rel = "stylesheet" href = "css/style.css">
     </head>
-
+    
     <body>
+        <script src = "js/main.js"></script>
         <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
-        <a style="text-decoration: none" href = "Hello Super Idol.html"> I have no dreams </a>
+        <p href = "AbstractClasses.html"> Abstract Data Classes </p>
+        <p href = "Searching.html"> Searching Algorithms </p>
+        <p href = "Sorting.html"> Sorting Algorithms </p>
+        <p href = "SubclassesAndInheritance.html"> Subclasses and Inheritance </p>
+        <p href = "Testing.html"> Software Testing </p>
+        <p href = "UML.html"> UML Diagrams </p>
     </body>
 </html>
