--- a/Searching.html
+++ b/Searching.html
@@ -2,10 +2,45 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width" type = "text\html">
-        <title>Searching Algorithms</title>
+        <title>Searching Algorithms</title>        
+        <link rel = "stylesheet" href = "css/style.css">
+
     </head>
 
     <body>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <img src="assets/java.png" alt="java">
+                </div>
+                <div class="main-menu">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="Searching.html">Searching Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="Sorting.html">Sorting Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="AbstractClasses.html">Abstract Data Classes</a>
+                        </li>
+                        <li>
+                            <a href="SubclassesAndInheritance.html">Subclasses And Inheritance</a>
+                        </li>
+                        <li>
+                            <a href="UML.html">UML Diagrams</a>
+                        </li>
+                        <li>
+                            <a href="Testing.html">Software Testing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <p> Super idol </p>
         <a href="index.html"> I have no dreams </a>
     </body>
