--- a/index.html
+++ b/index.html
@@ -2,18 +2,84 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width" type = "text\html">
-        <title>SuperIdolV2</title>
+        <title>Index</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel = "stylesheet" href = "css/style.css">
+        <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     </head>
-    
+      
     <body>
+        <!-- NavBar -->
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <img src="assets/java.png" alt="java">
+                </div>
+                <div class="main-menu">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="Searching.html">Searching Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="Sorting.html">Sorting Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="AbstractClasses.html">Abstract Data Classes</a>
+                        </li>
+                        <li>
+                            <a href="SubclassesAndInheritance.html">Subclasses And Inheritance</a>
+                        </li>
+                        <li>
+                            <a href="UML.html">UML Diagrams</a>
+                        </li>
+                        <li>
+                            <a href="Testing.html">Software Testing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Body -->
+        <section>
+            <div class="container-sm">
+                <div class="item item-1"> 
+                    <img src="assets/profilePic.jpg" alt="profilePic" width="500px">
+                </div>
+                <div class="item item-2"> 
+                    <h1>
+                        About Me
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur natus quod repellendus numquam soluta voluptatum magni, omnis deleniti veritatis, doloremque dolore repudiandae eligendi a ullam consequatur in porro hic perferendis.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container-sm">
+                <div class="item item-1"> 
+                    <img src="assets/profilePic.jpg" alt="profilePic" width="500px">
+                </div>
+                <div class="item item-2"> 
+                    <h1>
+                        About Me
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur natus quod repellendus numquam soluta voluptatum magni, omnis deleniti veritatis, doloremque dolore repudiandae eligendi a ullam consequatur in porro hic perferendis.
+                    </p>
+                </div>
+            </div>
+        </section>
         <script src = "js/main.js"></script>
-        <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
-        <p href = "AbstractClasses.html"> Abstract Data Classes </p>
-        <p href = "Searching.html"> Searching Algorithms </p>
-        <p href = "Sorting.html"> Sorting Algorithms </p>
-        <p href = "SubclassesAndInheritance.html"> Subclasses and Inheritance </p>
-        <p href = "Testing.html"> Software Testing </p>
-        <p href = "UML.html"> UML Diagrams </p>
+
     </body>
 </html>
