--- a/UML.html
+++ b/UML.html
@@ -7,6 +7,39 @@
     </head>
 
     <body>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <img src="assets/java.png" alt="java">
+                </div>
+                <div class="main-menu">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="Searching.html">Searching Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="Sorting.html">Sorting Algorithms</a>
+                        </li>
+                        <li>
+                            <a href="AbstractClasses.html">Abstract Data Classes</a>
+                        </li>
+                        <li>
+                            <a href="SubclassesAndInheritance.html">Subclasses And Inheritance</a>
+                        </li>
+                        <li>
+                            <a href="UML.html">UML Diagrams</a>
+                        </li>
+                        <li>
+                            <a href="Testing.html">Software Testing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <script src = "js/main.js"></script>
         <p style="color: aqua;" href = "Hello Super Idol.html"> Super idol </p>
         <a style="text-decoration: none" href = "Hello Super Idol.html"> I have no dreams </a>
